--- a/features/build.gradle
+++ b/features/build.gradle
@@ -3,8 +3,10 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
-
-
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 29
