--- a/login/build.gradle
+++ b/login/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.dynamic-feature'
 
 android {
     compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 29
@@ -16,4 +20,8 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation project(path: ':features')
+
+    implementation 'com.google.auto.service:auto-service-annotations:1.0-rc6'
+    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
 }
