--- a/payments/build.gradle
+++ b/payments/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.dynamic-feature'
 android {
     compileSdkVersion 29
     compileOptions {
-        targetCompatibility = 1.8
-        sourceCompatibility = 1.8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
     defaultConfig {
         minSdkVersion 15
@@ -18,8 +18,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':app')
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha04"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha04"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha05"
 
     implementation project(path: ':features')
 }
