--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     api 'com.google.dagger:dagger:2.24'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
-
-    api "com.google.android.play:core:1.6.3"
-
-    api "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05"
-    api "androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha05"
-    api "androidx.lifecycle:lifecycle-reactivestreams:2.2.0-alpha05"
+    api "com.google.android.play:core:1.6.4"
+    api "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
+    api "androidx.lifecycle:lifecycle-common-java8:2.2.0-rc01"
+    api "androidx.lifecycle:lifecycle-reactivestreams:2.2.0-rc01"
 
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.12'
