--- a/login/build.gradle
+++ b/login/build.gradle
@@ -12,16 +12,15 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    buildToolsVersion = '29.0.2'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':app')
-
+    implementation project(path: ':features')
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
-    implementation project(path: ':features')
-
     implementation 'com.google.auto.service:auto-service-annotations:1.0-rc6'
     annotationProcessor 'com.google.auto.service:auto-service:1.0-rc6'
 }
