--- a/payments/build.gradle
+++ b/payments/build.gradle
@@ -12,14 +12,13 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    buildToolsVersion = '29.0.2'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':app')
-
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0-beta01"
-
     implementation project(path: ':features')
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-rc01'
 }
